mainpage design completed

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@ http://www.tooplate.com/view/2075-digital-team
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h3>WEB DESIGN / WEB DEVELOPMENT / SOCIAL MEDIA</h3>
-				<h1>DIGITAL TEAM</h1>
+			  <h1>Malaysia Property-2U</h1>
+			  <h3>FIND YOUR DREAM PROPERTY HERE</h3>
 				<hr>
-				<a href="#work" class="smoothScroll btn btn-danger">What we do</a>
-				<a href="#contact" class="smoothScroll btn btn-default">Talk to us</a>
+				<a href="#work" class="smoothScroll btn btn-danger">Top Properties</a>
+				<a href="#contact" class="smoothScroll btn btn-default">Talk to us now</a>
 			</div>
 		</div>
 	</div>		
