--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ http://www.tooplate.com/view/2075-digital-team
 				<li><a href="#work" class="smoothScroll">WORK</a></li>
 				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
 				<li><a href="#team" class="smoothScroll">TEAM</a></li>
-				<li><a href="#portfolio" class="smoothScroll">PORTFOLIO</a></li>
+				<li><a href="#properties" class="smoothScroll">properties</a></li>
 				<li><a href="#pricing" class="smoothScroll">PRICING</a></li>
 				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
 			</ul>
@@ -69,7 +69,7 @@ http://www.tooplate.com/view/2075-digital-team
 			  <h1>Malaysia Property-2U</h1>
 			  <h3>FIND YOUR DREAM PROPERTY HERE</h3>
 				<hr>
-				<a href="#work" class="smoothScroll btn btn-danger">Top Properties</a>
+				<a href="#properties" class="smoothScroll btn btn-danger">Top Properties</a>
 				<a href="#contact" class="smoothScroll btn btn-default">Talk to us now</a>
 			</div>
 		</div>
@@ -82,8 +82,7 @@ http://www.tooplate.com/view/2075-digital-team
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<div class="section-title">
-					<strong>01</strong>
-					<h1 class="heading bold">WHAT WE DO</h1>
+<h1 class="heading bold">WHAT WE DO</h1>
 					<hr>
 				</div>
 			</div>
@@ -127,134 +126,14 @@ http://www.tooplate.com/view/2075-digital-team
 	</div>
 </section>
 
-<!-- about section -->
-<section id="about">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12 text-center">
-				<div class="section-title">
-					<strong>02</strong>
-					<h1 class="heading bold">OUR AGENCY</h1>
-					<hr>
-				</div>
-			</div>
-			<div class="col-md-6 col-sm-12">
-				<img src="images/about-img.jpg" class="img-responsive" alt="about img">
-			</div>
-			<div class="col-md-6 col-sm-12">
-				<h3 class="bold">DIGITAL TEAM</h3>
-				<h1 class="heading bold">Best Design Agency from California</h1>
-				<!-- Nav tabs -->
-				<ul class="nav nav-tabs" role="tablist">
-					<li class="active"><a href="#design" aria-controls="design" role="tab" data-toggle="tab">DESIGN</a></li>
-					<li><a href="#mobile" aria-controls="mobile" role="tab" data-toggle="tab">MOBILE</a></li>
-					<li><a href="#social" aria-controls="social" role="tab" data-toggle="tab">SOCIAL</a></li>
-				</ul>
-				<!-- tab panes -->
-				<div class="tab-content">
-					<div role="tabpanel" class="tab-pane active" id="design">
-						<p>Duis aute irure dolor in <a href="#">reprehenderit</a> in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Sed id est tincidunt, iaculis nulla vel, sodales metus. Morbi interdum accumsan augue, in accumsan neque lacinia sed. Fusce cursus eu ligula ut gravida.</p>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-					</div>
-					<div role="tabpanel" class="tab-pane" id="mobile">
-						<p>Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-						<p><a href="#">Duis aute irure dolor</a> in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-					</div>
-					<div role="tabpanel" class="tab-pane" id="social">
-						<p>Pellentesque elementum, lacus sit amet <a href="#">hendrerit</a> posuere, quam quam tristique nisi, nec ornare ligula magna id nisl. Donec blandit enim ac semper facilisis. Curabitur eu laoreet mauris, eget fermentum velit.</p>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!-- team section -->
-<section id="team">
+<!-- properties section -->
+<div id="properties">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<div class="section-title">
-					<strong>03</strong>
-					<h1 class="heading bold">TALENTED TEAM</h1>
-					<hr>
-				</div>
-			</div>
-			<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="0.9s">
-				<div class="team-wrapper">
-					<img src="images/team1.jpg" class="img-responsive" alt="team img">
-						<div class="team-des">
-							<h4>Cindy</h4>
-							<h3>Senior Designer</h3>
-							<hr>
-							<ul class="social-icon">
-								<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
-								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
-								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
-							</ul>
-						</div>
-				</div>
-			</div>
-			<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="1.3s">
-				<div class="team-wrapper">
-					<img src="images/team2.jpg" class="img-responsive" alt="team img">
-						<div class="team-des">
-							<h4>Mary</h4>
-							<h3>Core Developer</h3>
-							<hr>
-							<ul class="social-icon">
-								<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
-								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
-								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
-							</ul>
-						</div>
-				</div>
-			</div>
-			<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="1.6s">
-				<div class="team-wrapper">
-					<img src="images/team3.jpg" class="img-responsive" alt="team img">
-						<div class="team-des">
-							<h4>Linda</h4>
-							<h3>Manager</h3>
-							<hr>
-							<ul class="social-icon">
-								<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
-								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
-								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
-							</ul>
-						</div>
-				</div>
-			</div>
-			<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="1.6s">
-				<div class="team-wrapper">
-					<img src="images/team4.jpg" class="img-responsive" alt="team img">
-						<div class="team-des">
-							<h4>Sandar</h4>
-							<h3>Accountant</h3>
-							<hr>
-							<ul class="social-icon">
-								<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
-								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
-								<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
-							</ul>
-						</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!-- portfolio section -->
-<div id="portfolio">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
-				<div class="section-title">
-					<strong>04</strong>
-					<h1 class="heading bold">OUR PORTFOLIO</h1>
-					<hr>
+				  <h1 class="heading bold">Top Properties</h1>
+				  <hr>
 				</div>
 				<!-- ISO section -->
 				<div class="iso-section">
@@ -269,27 +148,27 @@ http://www.tooplate.com/view/2075-digital-team
                			<div class="iso-box-wrapper col4-iso-box">
 
                				 <div class="iso-box html wordpress mobile col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/portfolio-img1.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img1.jpg" alt="portfolio img"></a>
+               				 	<a href="images/properties-img1.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img1.jpg" alt="properties img"></a>
                				 </div>
 
                				 <div class="iso-box wordpress col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/portfolio-img2.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img2.jpg" alt="portfolio img"></a>
+               				 	<a href="images/properties-img2.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img2.jpg" alt="properties img"></a>
                				 </div>
 
                				 <div class="iso-box html mobile col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/portfolio-img3.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img3.jpg" alt="portfolio img"></a>
+               				 	<a href="images/properties-img3.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img3.jpg" alt="properties img"></a>
                				 </div>
 
                				 <div class="iso-box wordpress col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/portfolio-img4.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img4.jpg" alt="portfolio img"></a>
+               				 	<a href="images/properties-img4.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img4.jpg" alt="properties img"></a>
                				 </div>
 
                				 <div class="iso-box html photoshop col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/portfolio-img5.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img5.jpg" alt="portfolio img"></a>
+               				 	<a href="images/properties-img5.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img5.jpg" alt="properties img"></a>
                				 </div>
 
                				 <div class="iso-box photoshop col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/portfolio-img6.jpg" data-lightbox-gallery="portfolio-gallery"><img src="images/portfolio-img6.jpg" alt="portfolio img"></a>
+               				 	<a href="images/properties-img6.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img6.jpg" alt="properties img"></a>
                				 </div>
 
                			</div>
