--- a/index.html
+++ b/index.html
@@ -50,11 +50,7 @@ http://www.tooplate.com/view/2075-digital-team
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#home" class="smoothScroll">HOME</a></li>
-				<li><a href="#work" class="smoothScroll">WORK</a></li>
-				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-				<li><a href="#team" class="smoothScroll">TEAM</a></li>
-				<li><a href="#properties" class="smoothScroll">properties</a></li>
-				<li><a href="#pricing" class="smoothScroll">PRICING</a></li>
+				<li><a href="#properties" class="smoothScroll">PROPERTIES</a></li>
 				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
 			</ul>
 		</div>
@@ -74,56 +70,6 @@ http://www.tooplate.com/view/2075-digital-team
 			</div>
 		</div>
 	</div>		
-</section>
-
-<!-- work section -->
-<section id="work">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
-				<div class="section-title">
-<h1 class="heading bold">WHAT WE DO</h1>
-					<hr>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-				<i class="icon-cloud medium-icon"></i>
-					<h3>WEB MARKETING</h3>
-					<hr>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia.</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
-				<i class="icon-mobile medium-icon"></i>
-					<h3>UI &amp; UX DESIGN</h3>
-					<hr>
-					<p>Digital Team is free responsive Bootstrap v3.3.5 layout from <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a>. Images are from <a rel="nofollow" href="http://pixabay.com" target="_parent">Pixabay</a> free photo website.</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class="icon-laptop medium-icon"></i>
-					<h3>ECOMMERCE</h3>
-					<hr>
-					<p>You can edit and use this template for your websites. Please tell your friends about Tooplate. Thank you for visiting our website.</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class="icon-compass medium-icon"></i>
-					<h3>MOBILE APP</h3>
-					<hr>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia.</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class="icon-chat medium-icon"></i>
-					<h3>SOCIAL MEDIA</h3>
-					<hr>
-					<p>You can easily change icons by looking at <a href="https://www.elegantthemes.com/blog/resources/how-to-use-and-embed-an-icon-font-on-your-website" target="_blank">ET Line Icons</a>. Excepteu sunt in culpa qui officia. Duis aute irure dolor in reprehenderit.</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class="icon-browser medium-icon"></i>
-					<h3>RESPONSIVE LAYOUT</h3>
-					<hr>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia.</p>
-			</div>
-		</div>
-	</div>
 </section>
 
 <!-- properties section -->
@@ -180,76 +126,12 @@ http://www.tooplate.com/view/2075-digital-team
 	</div>
 </div>		
 
-<!-- pricing section -->
-<section id="pricing">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12 text-center">
-				<div class="section-title">
-					<strong>05</strong>
-					<h1 class="heading bold">OUR PRICING</h1>
-					<hr>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-6">
-				<div class="plan plan-one wow bounceIn" data-wow-delay="0.3s">
-					<div class="plan_title">
-						<i class="icon-mobile medium-icon"></i>
-						<h3>BASIC</h3>
-						<h2>$150 <span>per year</span></h2>
-					</div>
-					<ul>
-                    	<li>100 GB Cloud Storage</li>
-						<li>5 Pro Websites</li>
-						<li>10 Secured Emails</li>
-                        <li>24-hour Support</li>
-					</ul>
-					<button class="btn btn-warning">Get it now</button>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-6">
-				<div class="plan plan-two wow bounceIn" data-wow-delay="0.3s">
-					<div class="plan_title">
-						<i class="icon-desktop medium-icon"></i>
-						<h3>BUSINESS</h3>
-						<h2>$260 <span>per year</span></h2>
-					</div>
-					<ul>
-						<li>200 GB Cloud Storage</li>
-						<li>10 Pro Websites</li>
-						<li>20 Secured Emails</li>
-                        <li>30-Minute Support</li>
-					</ul>
-					<button class="btn btn-warning">Take this!</button>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-6">
-				<div class="plan plan-three wow bounceIn" data-wow-delay="0.3s">
-					<div class="plan_title">
-						<i class="icon-cloud medium-icon"></i>
-						<h3>PROFESSIONAL</h3>
-						<h2>$380 <span>per year</span></h2>
-					</div>
-					<ul>
-						<li>500 GB Cloud Storage</li>
-						<li>20 Pro Websites</li>
-						<li>40 Secured Emails</li>
-                        <li>Live Support</li>
-					</ul>
-					<button class="btn btn-warning">Buy Now</button>
-				</div>
-			</div>
-		</div>
-	</div>		
-</section>
-
 <!-- contact section -->
 <section id="contact">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
 				<div class="section-title">
-					<strong>06</strong>
 					<h1 class="heading bold">CONTACT US</h1>
 					<hr>
 				</div>
