--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@ http://www.tooplate.com/view/2075-digital-team
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/et-line-font.css">
-	<link rel="stylesheet" href="css/nivo-lightbox.css">
-	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 </head>
@@ -85,36 +83,21 @@ http://www.tooplate.com/view/2075-digital-team
 				<div class="iso-section">
 					<ul class="filter-wrapper clearfix">
                    		 <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
-                   		 <li><a href="#" class="opc-main-bg" data-filter=".html">HTML</a></li>
-                   		 <li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
-                    	 <li><a href="#" class="opc-main-bg" data-filter=".wordpress">Wordpress</a></li>
-                    	 <li><a href="#" class="opc-main-bg" data-filter=".mobile">Mobile</a></li>
+                   		 <li><a href="#" class="opc-main-bg" data-filter=".apartment">Apartment</a></li>
+                   		 <li><a href="#" class="opc-main-bg" data-filter=".condo">Condo</a></li>
+                    	 <li><a href="#" class="opc-main-bg" data-filter=".factory">Factory</a></li>
+                    	 <li><a href="#" class="opc-main-bg" data-filter=".land">Land</a></li>
+                    	 <li><a href="#" class="opc-main-bg" data-filter=".terraced">Terraced</a></li>
+                    	 <li><a href="#" class="opc-main-bg" data-filter=".semid">Semi-D</a></li>
+                    	 <li><a href="#" class="opc-main-bg" data-filter=".shop">Shop</a></li>
                		</ul>
                		<div class="iso-box-section wow fadeIn" data-wow-delay="0.9s">
                			<div class="iso-box-wrapper col4-iso-box">
 
-               				 <div class="iso-box html wordpress mobile col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/properties-img1.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img1.jpg" alt="properties img"></a>
-               				 </div>
-
-               				 <div class="iso-box wordpress col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/properties-img2.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img2.jpg" alt="properties img"></a>
-               				 </div>
-
-               				 <div class="iso-box html mobile col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/properties-img3.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img3.jpg" alt="properties img"></a>
-               				 </div>
-
-               				 <div class="iso-box wordpress col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/properties-img4.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img4.jpg" alt="properties img"></a>
-               				 </div>
-
-               				 <div class="iso-box html photoshop col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/properties-img5.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img5.jpg" alt="properties img"></a>
-               				 </div>
-
-               				 <div class="iso-box photoshop col-lg-4 col-md-4 col-sm-6">
-               				 	<a href="images/properties-img6.jpg" data-lightbox-gallery="properties-gallery"><img src="images/properties-img6.jpg" alt="properties img"></a>
+               				 <div class="iso-box semid col-lg-4 col-md-4 col-sm-6">
+               				 	<a href="properties/3-Sty-Semi-D_Bukit-Jelutong" data-lightbox-gallery="properties-gallery"><img src="properties/3-Sty-Semi-D_Bukit-Jelutong/images/thumbnail.jpg" alt="properties img">
+               				 	<h5 style="color: #000;">3 Storey Semi-D @ Bukit Jelutong</h5>
+               				 	</a>
                				 </div>
 
                			</div>
@@ -136,30 +119,21 @@ http://www.tooplate.com/view/2075-digital-team
 					<hr>
 				</div>
 			</div>
-			<div class="col-md-6 col-sm-12 contact-info">
-				<h2 class="heading bold">CONTACT INFO</h2>
-				<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia deserunt mollit anim id.</p>
-				<div class="col-md-6 col-sm-4">
-					<h3><i class="icon-envelope medium-icon wow bounceIn" data-wow-delay="0.6s"></i> EMAIL</h3>
-					<p>hello@company.com</p>
-				</div>
-				<div class="col-md-6 col-sm-4">
-					<h3><i class="icon-phone medium-icon wow bounceIn" data-wow-delay="0.6s"></i> PHONES</h3>
-					<p>010-020-0340 | 090-080-0760</p>
-				</div>
+			<div class="col-sm-12 contact-info col-lg-offset-2 col-lg-8 col-md-12">
+			  <p>Please enter your details below, we will contact you as soon as possible.</p>
 			</div>
-			<div class="col-md-6 col-sm-12">
+			<div class="col-sm-12 col-lg-offset-0 col-lg-12 col-md-12">
 				<form action="#" method="get" class="wow fadeInUp" data-wow-delay="0.6s">
-					<div class="col-md-6 col-sm-6">
-						<input type="text" class="form-control" placeholder="Name" name="name">
+					<div class="col-sm-6 col-lg-offset-3 col-lg-3 col-md-offset-1 col-md-5">
+						<input type="text" class="form-control" placeholder="Name" name="name" required>
 					</div>
-					<div class="col-md-6 col-sm-6">
-						<input type="email" class="form-control" placeholder="Email" name="email">
+					<div class="col-sm-6 col-lg-3 col-md-5">
+						<input type="text" class="form-control" placeholder="Phone number" name="phone" required>
 					</div>
-					<div class="col-md-12 col-sm-12">
-						<textarea class="form-control" placeholder="Message" rows="7" name="message"></textarea>
+					<div class="col-sm-12 col-lg-offset-3 col-lg-6 col-md-10 col-md-offset-1">
+						<textarea class="form-control" placeholder="Message (optional)" rows="7" name="message"></textarea>
 					</div>
-					<div class="col-md-offset-4 col-md-8 col-sm-offset-4 col-sm-8">
+					<div class="col-sm-offset-4 col-sm-8 col-lg-offset-6 col-lg-3 col-md-5 col-md-offset-6">
 						<input type="submit" class="form-control" value="SEND MESSAGE">
 					</div>
 				</form>
@@ -193,7 +167,6 @@ http://www.tooplate.com/view/2075-digital-team
 <script src="js/smoothscroll.js"></script>
 <script src="js/isotope.js"></script>
 <script src="js/imagesloaded.min.js"></script>
-<script src="js/nivo-lightbox.min.js"></script>
 <script src="js/jquery.backstretch.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
