--- a/properties/3-Sty-Semi-D_Bukit-Jelutong/index.html
+++ b/properties/3-Sty-Semi-D_Bukit-Jelutong/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Plat a Real Estate Category Flat Bootstrap Responsive  Website Template | Home :: w3layouts</title>
+<title>3 Storey Semi-D @ Jelutong Heights | MalaysiaProperty-2U</title>
 <link href="../_common/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <!-- Custom Theme files -->
@@ -9,6 +9,7 @@
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="theme-color" content="#000" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <script src="../_common/js/jquery-1.11.0.min.js"></script>
 </head>
@@ -202,10 +203,12 @@
 			    <p>Please leave your information if you want to know more about this property. We will contact you as soon as possible.</p>
 			  </div>
 			  <div class="contact-bottom">
-			  	<form action="#" method="post">
+			  	<form action="https://formspree.io/your@email.com" method="POST">
+					<input type="hidden" name="from" value="3 Sty Semi-D @ Bukit Jelutong" />
 			  		<input type="text" placeholder="Name" name="Name" required>
 			  		<input type="text" placeholder="Phone" name="Phone" required>
 			  		<textarea placeholder="Message (optional)" name="Message"></textarea>
+					<input type="hidden" name="_next" value="../../thanks.html" />
 			  		<input type="submit" value="Submit">
 			  	</form>
 			  </div>
@@ -226,7 +229,7 @@
 		 	</div>
     	    <div class="copy-rit">
 		 		 <ul class="ftr-icons">
-    	       	<li><a class="fb" href="#"> </a></li>
+    	       	<li><a target="_blank" href="https://www.facebook.com/Malaysia-Property-2U-1478146592467807/" class="fb"></a></li>
     	       </ul>
 		 	</div>
     	    <div class="clearfix"> </div>
