--- a/index.html
+++ b/index.html
@@ -2,24 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Digital Team HTML5 Layout - Tooplate</title>
+	<title>MalaysiaProperty-2U</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-<!--
-
-Template 2075 Digital Team
-
-http://www.tooplate.com/view/2075-digital-team
-
--->
+    <meta name="theme-color" content="#305286" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/et-line-font.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500" rel="stylesheet" type="text/css">
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
@@ -49,7 +43,7 @@ http://www.tooplate.com/view/2075-digital-team
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#home" class="smoothScroll">HOME</a></li>
 				<li><a href="#properties" class="smoothScroll">PROPERTIES</a></li>
-				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
+				<li></li>
 			</ul>
 		</div>
 	</div>
@@ -64,7 +58,6 @@ http://www.tooplate.com/view/2075-digital-team
 			  <h3>FIND YOUR DREAM PROPERTY HERE</h3>
 				<hr>
 				<a href="#properties" class="smoothScroll btn btn-danger">Top Properties</a>
-				<a href="#contact" class="smoothScroll btn btn-default">Talk to us now</a>
 			</div>
 		</div>
 	</div>		
@@ -91,7 +84,7 @@ http://www.tooplate.com/view/2075-digital-team
                     	 <li><a href="#" class="opc-main-bg" data-filter=".semid">Semi-D</a></li>
                     	 <li><a href="#" class="opc-main-bg" data-filter=".shop">Shop</a></li>
                		</ul>
-               		<div class="iso-box-section wow fadeIn" data-wow-delay="0.9s">
+               		<div class="iso-box-section wow fadeIn" data-wow-delay="0.2s">
                			<div class="iso-box-wrapper col4-iso-box">
 
                				 <div class="iso-box semid col-lg-4 col-md-4 col-sm-6">
@@ -110,38 +103,6 @@ http://www.tooplate.com/view/2075-digital-team
 </div>		
 
 <!-- contact section -->
-<section id="contact">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12 text-center">
-				<div class="section-title">
-					<h1 class="heading bold">CONTACT US</h1>
-					<hr>
-				</div>
-			</div>
-			<div class="col-sm-12 contact-info col-lg-offset-2 col-lg-8 col-md-12">
-			  <p>Please enter your details below, we will contact you as soon as possible.</p>
-			</div>
-			<div class="col-sm-12 col-lg-offset-0 col-lg-12 col-md-12">
-				<form action="#" method="get" class="wow fadeInUp" data-wow-delay="0.6s">
-					<div class="col-sm-6 col-lg-offset-3 col-lg-3 col-md-offset-1 col-md-5">
-						<input type="text" class="form-control" placeholder="Name" name="name" required>
-					</div>
-					<div class="col-sm-6 col-lg-3 col-md-5">
-						<input type="text" class="form-control" placeholder="Phone number" name="phone" required>
-					</div>
-					<div class="col-sm-12 col-lg-offset-3 col-lg-6 col-md-10 col-md-offset-1">
-						<textarea class="form-control" placeholder="Message (optional)" rows="7" name="message"></textarea>
-					</div>
-					<div class="col-sm-offset-4 col-sm-8 col-lg-offset-6 col-lg-3 col-md-5 col-md-offset-6">
-						<input type="submit" class="form-control" value="SEND MESSAGE">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</section>
-
 <!-- footer section -->
 <footer>
 	<div class="container">
@@ -150,11 +111,7 @@ http://www.tooplate.com/view/2075-digital-team
 			  <p>Copyright © Malaysia Property-2U | Designed by: <a href="mailto:bkchow@yes.my">khaibin</a></p>
 			  <hr>
 				<ul class="social-icon">
-					<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
-					<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
-					<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-behance wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-tumblr wow fadeIn" data-wow-delay="0.9s"></a></li>
+					<li><a target="_blank" href="https://www.facebook.com/Malaysia-Property-2U-1478146592467807/" class="fa fa-facebook wow fadeIn" data-wow-delay="0.2s"></a></li>
 				</ul>
 			</div>
 		</div>
