--- a/properties/3-Sty-Semi-D_Bukit-Jelutong/index.html
+++ b/properties/3-Sty-Semi-D_Bukit-Jelutong/index.html
@@ -127,14 +127,14 @@
 					<li><a>Furnished unit with LIFT</a></li>
 						<li><a>Low density with 24-hour security</a></li>
 						<li><a>Good potential for investment (capital growth)</a></li>
-						<li><a>2 master bedrooms, 3 bedrooms, 1 maid's room</a></li>
+						<li><a>2 master bedroom, 3 bedrooms, 1 maid's room</a></li>
 						<li><a>All bedrooms come with individual bathroom with facilities</a></li>
-						<li><a>Top floor come with sky garden </a></li>
+						<li><a>Sky garden on top floor</a></li>
 						<li><a>Wide car-porch </a></li>
 						<li><a>Marble slab and timber flooring</a></li>
 						<li><a>Full set wet &amp; dry kitchen cabinet </a></li>
-						<li><a>Come with air conditioner, autogate, built-in alarm system with cctv, water heater, water filter, solar power system, etc...</a></li>
-						<li><b>Book for a viewing session by providing your information below, we will contact you as soon as possible!</b></li>
+						<li><a>Comes with air conditioner, autogate, built-in alarm system with cctv, water heater, water filter, solar power system, etc...</a></li>
+						<li><b>Book a viewing session by providing your information below, we will contact you as soon as possible!</b></li>
 				  </ul>
 				</div>
 				<div class="col-md-6 project-right">
@@ -199,8 +199,8 @@
 		<div class="contact-main w3agile">
 			<div class="col-md-7 contact-left">
 			  <div class="contact-top">
-			    <h3>Book for a viewing session</h3>
-			    <p>Please leave your information if you want to know more about this property. We will contact you as soon as possible.</p>
+			    <h3>Book a viewing session</h3>
+			    <p>Please leave your details to know more about this property. We will contact you as soon as possible.</p>
 			  </div>
 			  <div class="contact-bottom">
 			  	<form action="https://formspree.io/your@email.com" method="POST">
