--- a/properties/2-Sty-Superlink_Seremban-II/index.html
+++ b/properties/2-Sty-Superlink_Seremban-II/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>3 Storey Semi-D @ Jelutong Heights | MalaysiaProperty-2U</title>
+<title>2 Storey Superlink House @ Seremban 2 | MalaysiaProperty-2U</title>
 <link href="../_common/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <!-- Custom Theme files -->
@@ -27,7 +27,7 @@
 		<div class="branches-main">
 
 			<div class="branches-top">
-			  <h3 style="margin-top:25px">3 Sty Semi-D @ Bukit Jelutong</h3>
+			  <h3 style="margin-top:25px">2 Storey Superlink House @ Seremban 2</h3>
 </div>
 			<div style="background-color: #000000; padding-top: 5px; padding-right: 0px; padding-left: 0px; padding-bottom: 20px;">
 			    <script type="text/javascript" src="../_common/js/jssor.slider.min.js"></script>
@@ -82,15 +82,6 @@
             <div data-p="112.50" style="display: none;">
               <img data-u="image" src="images/3.jpg" />
             </div>
-            <div data-p="112.50" style="display: none;">
-              <img data-u="image" src="images/4.jpg" />
-            </div>
-            <div data-p="112.50" style="display: none;">
-                <img data-u="image" src="images/5.jpg" />
-            </div>
-            <div data-p="112.50" style="display: none;">
-                <img data-u="image" src="images/6.jpg" />
-            </div>
         
         </div>
         <div data-u="navigator" class="jssorb05" style="bottom:16px;right:16px;" data-autocenter="1">
@@ -112,25 +103,23 @@
 		<div class="project-main">			
 			<div class="project-top">
 			  <h3>Property Details</h3>
-			  <p>Property Type: Semi-Detached House</p>
+			  <p>Property Type: Superlink Terrace House</p>
 			</div>
 			<div class="project-bottom">
 				<div class="col-md-6 project-left">
-				  <h5>New 3 Storey Semi-D @ Jelutong Heights</h5>
-				  <p><strike>Market price:&nbsp;RM 2,500,000</strike><br>
-				    <strong>Get it now for RM&nbsp;1,860,000!</strong></p>
+				  <h5>New 2 Storey Superlink House @ Seremban 2 </h5>
+				  <p><strong>Get it now for RM&nbsp;480,000!</strong></p>
 				  <p><br></p>
-				  <p>Land Area: 40 sqft × 80 sqft<br>
-				    Built Up Area: 4,200 sqft<br>
+				  <p>Land Area: 20 sqft × 75 sqft<br>
 			      </p>
 				  <ul>
-					<li><a>Furnished unit with LIFT</a></li>
-						<li><a>Low density with 24-hour security</a></li>
-						<li><a>Good potential for investment (capital growth)</a></li>
-						<li><a>2 master bedroom, 3 bedrooms, 1 maid's room</a></li>
-						<li><a>All bedrooms come with individual bathroom with facilities</a></li>
-						<li><a>Sky garden on top floor</a></li>
-						<li><a>Wide car-porch </a></li>
+						<li><a>Freehold</a></li>
+						<li><a>4 Bedroom + 4 Bathroom</a></li>
+						<li><a>High Ceiling (12 ft)</a></li>
+						<li><a>Spacious Living Hall and Bedroom</a></li>
+						<li><a>Gated and Guarded</a></li>
+						<li><a>Private Playground Facilities</a></li>
+						<li><a>Fully Extended and Renovated</a></li>
 						<li><a>Marble slab and timber flooring</a></li>
 						<li><a>Full set wet &amp; dry kitchen cabinet </a></li>
 						<li><a>Comes with air conditioner, autogate, built-in alarm system with cctv, water heater, water filter, solar power system, etc...</a></li>
@@ -159,31 +148,12 @@
 					       </div>
 	
 					  	</div>
-					  	<div class="pro-right">
-					  	  <div class="zoom-mask">
-						      <a target="_blank" href="images/4.jpg"><img src="images/4.jpg" alt="" class="img-responsive zoom-img"></a>
-					       </div>
-					  	</div>
-					  	<div class="clearfix"> </div>
-				  </div>
-                  	               <div class="pro-block">
-				  	    <div class="pro-left">
-					  	   <div class="zoom-mask">
-						      <a target="_blank" href="images/5.jpg"><img src="images/5.jpg" alt="" class="img-responsive zoom-img"></a>
-					       </div>
-	
-					  	</div>
-					  	<div class="pro-right">
-					  	  <div class="zoom-mask">
-						      <a target="_blank" href="images/6.jpg"><img src="images/6.jpg" alt="" class="img-responsive zoom-img"></a>
-					       </div>
-					  	</div>
 					  	<div class="clearfix"> </div>
 				  </div>
 				</div>
                 <div class="col-md-5 map col-lg-12">
                 <div class="map-container">
-			 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.9878906181407!2d101.52009141475729!3d3.0978775977441657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc520a4bd0356f%3A0xdf659b7076e9183c!2sJelutong+Heights!5e0!3m2!1sen!2s!4v1473069078889"> </iframe>
+			 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6702.641866730355!2d101.90385454726!3d2.692191978708198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cde7c7ab8a0863%3A0x16af607226984b17!2sSeremban+2%2C+70300+Seremban%2C+Negeri+Sembilan!5e0!3m2!1sen!2smy!4v1473397891587"> </iframe>
 				<script type="application/x-javascript"> $('.map-container') .click(function(){ $(this).find('iframe').addClass('clicked')}) .mouseleave(function(){ $(this).find('iframe').removeClass('clicked')}); </script>
                 </div>
 			 </div>
@@ -204,7 +174,7 @@
 			  </div>
 			  <div class="contact-bottom">
 			  	<form action="https://formspree.io/your@email.com" method="POST">
-					<input type="hidden" name="from" value="3 Sty Semi-D @ Bukit Jelutong" />
+					<input type="hidden" name="from" value="2 Sty Superlink @ Seremban 2" />
 			  		<input type="text" placeholder="Name" name="Name" required>
 			  		<input type="text" placeholder="Phone" name="Phone" required>
 			  		<textarea placeholder="Message (optional)" name="Message"></textarea>
