--- a/properties/Shoplot_C180/index.html
+++ b/properties/Shoplot_C180/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>3 Storey Semi-D @ Jelutong Heights | MalaysiaProperty-2U</title>
+<title>Shoplot @ Dataran C180 | MalaysiaProperty-2U</title>
 <link href="../_common/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <!-- Custom Theme files -->
@@ -27,7 +27,7 @@
 		<div class="branches-main">
 
 			<div class="branches-top">
-			  <h3 style="margin-top:25px">3 Sty Semi-D @ Bukit Jelutong</h3>
+			  <h3 style="margin-top:25px">Shoplot @ Dataran C180</h3>
 </div>
 			<div style="background-color: #000000; padding-top: 5px; padding-right: 0px; padding-left: 0px; padding-bottom: 20px;">
 			    <script type="text/javascript" src="../_common/js/jssor.slider.min.js"></script>
@@ -112,28 +112,23 @@
 		<div class="project-main">			
 			<div class="project-top">
 			  <h3>Property Details</h3>
-			  <p>Property Type: Semi-Detached House</p>
+			  <p>Property Type: Shoplot</p>
 			</div>
 			<div class="project-bottom">
 				<div class="col-md-6 project-left">
-				  <h5>New 3 Storey Semi-D @ Jelutong Heights</h5>
-				  <p><strike>Market price:&nbsp;RM 2,500,000</strike><br>
-				    <strong>Get it now for RM&nbsp;1,860,000!</strong></p>
+				  <h5>Dataran C180 Shoplot @ Cheras Selatan</h5>
+				  <p><strike>Market price:&nbsp;RM 2,050,000</strike><br>
+				    <strong>Get it now for RM&nbsp;1,770,000!</strong></p>
 				  <p><br></p>
-				  <p>Land Area: 40 sqft × 80 sqft<br>
-				    Built Up Area: 4,200 sqft<br>
+				    Built Up Area: 2,600 sqft<br>
 			      </p>
 				  <ul>
-					<li><a>Furnished unit with LIFT</a></li>
-						<li><a>Low density with 24-hour security</a></li>
+						<li><a>UG Floor corner unit</a></li>
+						<li><a>Freehold</a></li>
 						<li><a>Good potential for investment (capital growth)</a></li>
-						<li><a>2 master bedroom, 3 bedrooms, 1 maid's room</a></li>
-						<li><a>All bedrooms come with individual bathroom with facilities</a></li>
-						<li><a>Sky garden on top floor</a></li>
-						<li><a>Wide car-porch </a></li>
-						<li><a>Marble slab and timber flooring</a></li>
-						<li><a>Full set wet &amp; dry kitchen cabinet </a></li>
-						<li><a>Comes with air conditioner, autogate, built-in alarm system with cctv, water heater, water filter, solar power system, etc...</a></li>
+						<li><a>Surround by future development</a></li>
+						<li><a>High traffic</a></li>
+						<li><a>Future MRT Station</a></li>
 						<li><b>Book a viewing session by providing your information below, we will contact you as soon as possible!</b></li>
 				  </ul>
 				</div>
@@ -183,7 +178,7 @@
 				</div>
                 <div class="col-md-5 map col-lg-12">
                 <div class="map-container">
-			 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.9878906181407!2d101.52009141475729!3d3.0978775977441657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc520a4bd0356f%3A0xdf659b7076e9183c!2sJelutong+Heights!5e0!3m2!1sen!2s!4v1473069078889"> </iframe>
+			 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d498.02801169139235!2d101.76614677285245!3d3.034463116196213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc34cd1d17bff5%3A0x91e3a99ca5b4fdf5!2sC180%2C+43200+Cheras%2C+Selangor!5e0!3m2!1sen!2smy!4v1473313423010"> </iframe>
 				<script type="application/x-javascript"> $('.map-container') .click(function(){ $(this).find('iframe').addClass('clicked')}) .mouseleave(function(){ $(this).find('iframe').removeClass('clicked')}); </script>
                 </div>
 			 </div>
@@ -204,7 +199,7 @@
 			  </div>
 			  <div class="contact-bottom">
 			  	<form action="https://formspree.io/your@email.com" method="POST">
-					<input type="hidden" name="from" value="3 Sty Semi-D @ Bukit Jelutong" />
+					<input type="hidden" name="from" value="Shoplot @ Dataran C180" />
 			  		<input type="text" placeholder="Name" name="Name" required>
 			  		<input type="text" placeholder="Phone" name="Phone" required>
 			  		<textarea placeholder="Message (optional)" name="Message"></textarea>
