--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form name="newsletter" id="signup-form" method="post" action="#" netlify>
+			<form name="newsletter" id="signup-form" action="#" netlify>
 				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<button class="subscribe">Subscribe</button>
+				<input type="submit" value="Sign Up" />
 			</form>
 
 		<!-- Footer -->
