--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form name="newsletter" id="signup-form" method="post" action="#" netlify>
+			<form name="newsletter" id="signup-form" action="#" netlify>
 				<input type="email" name="email" id="email" placeholder="Email Address" />
 				<button class="subscribe">Subscribe</button>
 			</form>
