--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/home/css/ie9.css" /><![endif]-->
 	</head>
 	<body>
-
+		<iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe" z-index="-1"></iframe>
 		<!-- Header -->
 			<header id="header">
 				<h1>MalaysiaProperty-2U</h1>
@@ -24,9 +24,9 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form name="newsletter" id="signup-form" action="#" netlify>
+			<form id="gform" action="https://script.google.com/a/macros/yes.my/s/AKfycbxmzwgZKcuFiolqdGAZwyBYo4nLM8EJtGse5X2DHBzMjlrDbfgg/exec" method="POST" target="dummyframe">
 				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<button class="subscribe">Subscribe</button>
+				<input type="submit" value="Subscribe" /> 
 			</form>
 
 		<!-- Footer -->
@@ -42,6 +42,5 @@
 		<!-- Scripts -->
 			<!--[if lte IE 8]><script src="assets/home/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/home/js/main.js"></script>
-
 	</body>
 </html>
