--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/home/css/ie9.css" /><![endif]-->
 	</head>
 	<body>
-		<iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe" z-index="-1"></iframe>
+		<iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
 		<!-- Header -->
 			<header id="header">
 				<h1>MalaysiaProperty-2U</h1>
@@ -24,7 +24,7 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="gform" action="https://script.google.com/a/macros/yes.my/s/AKfycbxmzwgZKcuFiolqdGAZwyBYo4nLM8EJtGse5X2DHBzMjlrDbfgg/exec" method="POST" target="dummyframe">
+			<form id="gform" action="https://script.google.com/macros/s/AKfycbxmzwgZKcuFiolqdGAZwyBYo4nLM8EJtGse5X2DHBzMjlrDbfgg/exec" method="POST" target="dummyframe">
 				<input type="email" name="email" id="email" placeholder="Email Address" />
 				<input type="submit" value="Subscribe" /> 
 			</form>
