--- a/property/semi-d/bukit-jelutong/index.html
+++ b/property/semi-d/bukit-jelutong/index.html
@@ -63,9 +63,7 @@
 						</div>
 					</div>
 					<script type="text/javascript">jssor_1_slider_init();</script>
-					<a href="#register">
-						<p class="price-text"><sup>get it now for only</sup> <b>RM 2,500,000</b> &#187;</p>
-					</a>
+					<p class="price-text"><sup>only from</sup> <b>RM 2,500,000</b></p>
 					<hr>
 					<ul class="desc-points">
 						<li>Furnished unit with LIFT</li>
