--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<!-- Signup Form -->
 			<form id="gform" action="https://script.google.com/macros/s/AKfycbxmzwgZKcuFiolqdGAZwyBYo4nLM8EJtGse5X2DHBzMjlrDbfgg/exec" method="POST" target="dummyframe">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
+				<input type="email" name="email" id="email" placeholder="Email Address" required/>
 				<input type="submit" value="Subscribe" /> 
 			</form>
 
