--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 			<header id="header">
 				<h1>MalaysiaProperty-2U</h1>
 				<p class="subtitle">Your local property expert in Malaysia.</p>
-				<p class="newsletter">Sign up to our newsletter</p>
+				<p class="newsletter">Ask us any questions</p>
 			</header>
 
 		<!-- Signup Form -->
 			<form id="gform" action="https://script.google.com/macros/s/AKfycbxmzwgZKcuFiolqdGAZwyBYo4nLM8EJtGse5X2DHBzMjlrDbfgg/exec" method="POST" target="dummyframe">
-				<input type="email" name="email" id="email" placeholder="Email Address" required/>
-				<input type="submit" value="Subscribe" /> 
+				<input type="text" name="phone" id="phone" placeholder="Phone number" required/>
+				<input type="submit" value="Call me" /> 
 			</form>
 
 		<!-- Footer -->
