--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!-- Signup Form -->
 			<form id="gform" action="https://script.google.com/macros/s/AKfycbxmzwgZKcuFiolqdGAZwyBYo4nLM8EJtGse5X2DHBzMjlrDbfgg/exec" method="POST" target="dummyframe">
 				<input type="text" name="phone" id="phone" placeholder="Phone number" required/>
-				<input type="submit" value="Call me" /> 
+				<input type="submit" value="Call me" style="max-width: 18em;" /> 
 			</form>
 
 		<!-- Footer -->
