Pre-Launch Condominium @ KL South

--- a/property/condo/kl-south/index.html
+++ b/property/condo/kl-south/index.html
@@ -75,7 +75,7 @@
 						<li class="tick">Short walking distance to AEON &amp; MRT 2</li>
 						<li class="tick">3 bedrooms + 2 bathrooms</li>
 						<li class="tick">2 car parks</li>
-						<li class="tick">Built-up from 890 sqft</li>
+						<li class="tick">Built-up from 890 sqft - 1200 sqft</li>
 						<li class="tick">Features:</li>
 						<ul>
 							<li>Swimming Pool</li>
