--- a/property/factory/taman-klang-utama/index.html
+++ b/property/factory/taman-klang-utama/index.html
@@ -68,7 +68,7 @@
 					<ul class="desc-points">
 						<li>Freehold</li>
 						<li>Land size: 25&#39; &#215; 80&#39;</li>
-						<li>Built up size: 2800#39;</li>
+						<li>Built up size: 2800&#39;</li>
 						<li>Only 5km from Port Klang</li>
 						<li>Within minutes away from Klang town centre</li>
 						<li>Well linked by the New Klang Valley Expressway, Federal Highway, North-South Highway and Shah Alam Expressway</li>
